# pycairo-animations

./: .gitignore  Makefile  pyproject.toml
anim/: frame.py  video_writer.py
examples/: hello_world.py  random_walk.py
