[tool.poetry]
name = "pycairo-animations"
version = "0.1.0"
description = ""
authors = []
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Pillow = "^8.4.0"
pycairo = "^1.20.1"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
pytest = "^6.2.5"
isort = "^5.9.3"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
